--- a/src/css/global.css
+++ b/src/css/global.css
@@ -1,7 +1,8 @@
 :root {
+    --section-padding: 80px ;
     --hedding-font-family: 'Montserrat', sans-serif;
     --default-font-family: 'Roboto', sans-serif;
-    --hedding-color: #fff;
+    --heading-color: #fff;
     --default-color: rgba(255, 255, 255, 0.8);
     --primary-green-color: #008870 ;
 }
