--- a/src/css/cssComponents.css
+++ b/src/css/cssComponents.css
@@ -20,4 +20,35 @@
     box-shadow:0px 2px 13px var(--primary-green-color) ;
 }
 .scondary-btn {}
+.main-heading {
+    text-align: center;
+    color: white;
+    text-transform: uppercase;
+    position: relative;
+    padding: 20px 0;
+    margin-bottom: 2rem;
+}
 
+.main-heading span {
+    font-family: var(--hedding-font-family);
+    font-size: 2.5rem;
+    font-weight: 900;
+    position: absolute;
+    z-index: -1;
+    top: -15px;
+    left: 50%;
+    transform: translateX(-50%);
+    color: color-mix(in srgb, var(--heading-color), transparent 95%);
+}
+
+.main-heading h1 {
+    font-size: 35px;
+    font-weight: 900;
+    text-transform: uppercase;
+}
+
+.main-heading p {
+    color: var(--default-color);
+    text-transform: none;
+    font-size: 18px;
+}
