--- a/src/style.css
+++ b/src/style.css
@@ -12,8 +12,9 @@
 body {
     font-family: var(--default-font-family);
     background-color: #000;
+    color: white;
     height: 10000px;
-        transition: 0.5s;
+    transition: 0.5s;
 }
 ul {
     list-style: none;
@@ -27,7 +28,6 @@ a{
 /* Start Lading SEction  */
 .landing-section {
     width: 100%;
-    height: 100vh;
     position: relative;
 }
 .landing-section .header-section {
@@ -65,7 +65,6 @@ a{
 }
 
 .landing-content {
-    height: calc(100vh - 91px);
     margin-top: 91px;
 }
 .landing-content .row h1 {
@@ -145,3 +144,76 @@ a{
             transform: translateY(-11px);
 }
 /* End Lading SEction  */
+
+.about-section {
+    padding-top: var(--section-padding);
+    padding-bottom: var(--section-padding)
+}
+
+.about-section .about-content {}
+
+.about-content .content .experience-box {
+    width: 150px;
+    padding: 25px;
+    background: var(--primary-green-color);
+    border-radius: 12px;
+    right: 50px;
+    bottom: -50px;
+    position: absolute;
+    text-align: center;
+    color: white;
+}
+
+.about-content .content .experience-box .years {
+    font-weight: 900;
+    font-size: 2.5rem;
+    font-family: var(--hedding-font-family);
+}
+
+.about-content .content .experience-box .text {
+    line-height: 1.1;
+}
+
+.about-content .features-title {
+    font-weight: 900;
+    line-height: 1.1;
+    margin-bottom: 1rem;
+}
+
+.about-content .features-title+p {
+    color: var(--default-color);
+    margin-bottom: 2rem;
+}
+
+.about-content .features-list {}
+
+.about-content .features-list .features-item {}
+
+.about-content .features-item .icon {
+    background-color: #061110;
+    flex-shrink: 0;
+    width: 50px;
+    height: 50px;
+    border-radius: 12px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: var(--primary-green-color);
+    transition: 0.2s;
+}
+
+.about-content .features-item .icon:hover {
+    background-color: var(--primary-green-color);
+    color: white;
+    transform: translateY(-15px);
+}
+
+.about-content .features-item .icon:hover {}
+
+.about-content .features-item .info {}
+
+.about-content .features-item .info h4 {}
+
+.about-content .features-item .info p {
+    color: var(--default-color);
+}
