--- a/src/css/global.css
+++ b/src/css/global.css
@@ -5,4 +5,5 @@
     --heading-color: #fff;
     --default-color: rgba(255, 255, 255, 0.8);
     --primary-green-color: #008870 ;
+    --scondary-bg-color: #1f1f23 ;
 }
