--- a/src/style.css
+++ b/src/style.css
@@ -217,3 +217,93 @@ a{
 .about-content .features-item .info p {
     color: var(--default-color);
 }
+
+/* Start Service Section  */
+.service-section {}
+
+.service-section .service-content {}
+
+.service-content .service-box {
+    display: flex;
+    background: var(--scondary-bg-color);
+    border-radius: 20px;
+    padding: 0;
+    overflow: hidden;
+    box-shadow: 0 0 20px #0088704f;
+    position: relative;
+}
+
+.service-content .service-icon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 40px;
+    padding: 0 1.5rem;
+    background-color: color-mix(in srgb, var(--primary-green-color), transparent 90%);
+}
+
+.service-content .service-info {
+    padding: 1rem;
+}
+
+.service-content .service-info .service-number {
+    content: "0" counter(box-count);
+    font-size: 3rem;
+    font-weight: 900;
+    position: absolute;
+    z-index: 1;
+    right: 10px;
+    top: 10px;
+    color: color-mix(in srgb, var(--heading-color), transparent 90%);
+    font-family: var(--hedding-font-family);
+}
+
+.service-content .service-info h1 {
+    font-size: 1.8rem;
+}
+
+.service-content .service-info p {
+    font-size: 18px;
+    color: var(--default-color);
+}
+
+.service-content .service-info a {
+    color: var(--primary-green-color) !important;
+}
+
+.service-box:hover {
+    transform: translateY(-10px);
+    box-shadow: 0 10px 20px #0088705e;
+
+    .service-icon {
+        background-color: var(--primary-green-color);
+    }
+
+    .service-info i {
+        margin-left: 8px;
+    }
+
+}
+
+.service-content .cta-box {
+    padding: 2rem;
+    background: var(--primary-green-color);
+    border-radius: 20px;
+}
+
+.service-content .cta-box .box-img img {
+    width: 150px;
+    height: 150px;
+    object-fit: cover;
+    border-radius: 50%;
+    border: 4px solid white
+}
+
+.service-content .cta-box .box-info h3 {font-weight: 700;
+    font-size: 2rem;
+    margin-bottom: 1rem;}
+.service-content .cta-box .box-info p {
+    color: var(--default-color);
+    margin-bottom: 2rem;
+}
+/* Start Service Section  */
