--- a/src/css/global.css
+++ b/src/css/global.css
@@ -6,4 +6,5 @@
     --default-color: rgba(255, 255, 255, 0.8);
     --primary-green-color: #008870 ;
     --scondary-bg-color: #1f1f23 ;
+    --section-bg-color: #1d1d1e ;
 }
