--- a/src/style.css
+++ b/src/style.css
@@ -14,7 +14,7 @@ body {
     background-color: #000;
     color: white;
     height: 10000px;
-    transition: 0.5s;
+    transition: 0.3s;
 }
 ul {
     list-style: none;
@@ -307,3 +307,114 @@ a{
     margin-bottom: 2rem;
 }
 /* Start Service Section  */
+
+/* Start Steps Section  */
+.steps-section {}
+
+.steps-content .step-box {
+    display: flex;
+    gap: 2rem;
+    position: relative;
+    border-radius: 10px;
+    background: linear-gradient(45deg, black -80%, var(--scondary-bg-color) 100%);
+    padding: 30px;
+    border: 1px solid #0088703b;
+    transition: 0.3s;
+}
+
+.steps-content .step-box .step-number {
+    left: -50px;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    font-weight: 900;
+    font-size: 4rem;
+    font-family: var(--hedding-font-family);
+    color: #00887047;
+    transition: 0.3s;
+}
+
+.steps-content .step-box .step-icon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 1.8rem;
+    width: 70px;
+    height: 70px;
+    background: var(--primary-green-color);
+    border-radius: 12px;
+    flex-shrink: 0;
+    transition: 0.3s;
+}
+
+.steps-content .step-box:hover {
+    transform: translateX(1rem) !important;
+
+    .step-number {
+        top: 65%;
+        color: var(--primary-green-color);
+    }
+
+    .step-icon {
+        transform: rotate(20deg);
+    }
+}
+
+/* End Steps Section  */
+/* Start Testimonials Section  */
+.testimonial-section {
+    background-color: var(--section-bg-color);
+}
+
+.testimonial-section .testi-box {
+    border-radius: 10px;
+    overflow: hidden;
+    border: 1px solid #ffffff73;
+    margin-bottom: 3rem;
+    .top-content {
+        padding: 20px;
+        background-color: #37373e;
+    }
+
+    .top-content p {
+        font-size: 16px;
+    }
+
+    .bottom-content {
+        padding: 20px;
+        background-color: #414148;
+    }
+
+    .bottom-content .stars {
+        font-size: 16px;
+        margin-bottom: 1rem;
+        display: block;
+        color: yellow;
+    }
+
+    .bottom-content .testi-info {
+        display: flex;
+        align-items: center;
+        gap: 1rem;
+    }
+
+    .bottom-content .testi-info img {
+        width: 60px;
+        height: 60px;
+        border-radius: 50%;
+        border: 1px solid white;
+    }
+
+    .bottom-content .testi-info h4 {
+        font-size: 20px;
+        font-weight: 900;
+    }
+
+    .bottom-content .testi-info h5 {
+        font-size: 16px;
+        font-weight: 500;
+        color: var(--default-color);
+    }
+}
+
+/* Start Testimonials Section */
