--- a/src/css/cssComponents.css
+++ b/src/css/cssComponents.css
@@ -70,3 +70,14 @@
         font-size: 18px;
             color: var(--default-color);
 }
+
+@media (max-width: 678px){
+    .h-md {
+        font-size: 22px !important;
+        font-weight: 600 !important;
+    }
+    .p-md {
+        font-size: 16px !important;
+    }
+}
+
