--- a/src/style.css
+++ b/src/style.css
@@ -13,7 +13,6 @@ body {
     font-family: var(--default-font-family);
     background-color: #000;
     color: white;
-    height: 10000px;
     transition: 0.3s;
 }
 ul {
@@ -24,6 +23,9 @@ a{
     color: #fff !important;
 }
 
+.container {
+    overflow: hidden;
+}
 
 /* Start Lading SEction  */
 .landing-section {
@@ -150,8 +152,6 @@ a{
     padding-bottom: var(--section-padding)
 }
 
-.about-section .about-content {}
-
 .about-content .content .experience-box {
     width: 150px;
     padding: 25px;
@@ -185,10 +185,6 @@ a{
     margin-bottom: 2rem;
 }
 
-.about-content .features-list {}
-
-.about-content .features-list .features-item {}
-
 .about-content .features-item .icon {
     background-color: #061110;
     flex-shrink: 0;
@@ -208,20 +204,11 @@ a{
     transform: translateY(-15px);
 }
 
-.about-content .features-item .icon:hover {}
-
-.about-content .features-item .info {}
-
-.about-content .features-item .info h4 {}
-
 .about-content .features-item .info p {
     color: var(--default-color);
 }
 
 /* Start Service Section  */
-.service-section {}
-
-.service-section .service-content {}
 
 .service-content .service-box {
     display: flex;
@@ -449,7 +436,6 @@ a{
 /* Start Testimonials Section */
 
 /* Start Portfolio Section  */
-.portfolio-section {}
 
 .portfolio-section .portfolio-filters-wrapper {
     margin: 0 auto 5rem;
@@ -465,7 +451,12 @@ a{
     margin: auto;
     position: relative;
 }
-
+@media (max-width: 768px) {
+    .portfolio-section .portfolio-filters-wrapper .portfolio-filters {
+        gap: 0.4rem;
+        flex-wrap: wrap;
+    }
+}
 .portfolio-section .portfolio-filters-wrapper .portfolio-filters::after {
     content: "";
     position: absolute;
@@ -488,7 +479,13 @@ a{
     position: relative;
     cursor: pointer;
 }
-
+@media (max-width: 768px) {
+    .portfolio-section .portfolio-filters-wrapper .filter-item {
+        padding: 8px 10px;
+        font-size: 14px;
+        text-wrap-mode: nowrap;
+    }
+}
 .portfolio-section .portfolio-filters-wrapper .filter-item::after {
     content: "";
     position: absolute;
@@ -509,11 +506,11 @@ a{
     width: 100%;
 }
 
-.portfolio-items-wrapper {}
-
-.portfolio-items {}
-
-.portfolio-items .portfolio-item {}
+@media (max-width: 576px) {
+    .portfolio-section .portfolio-filters-wrapper .filter-item::after {
+        display: none;
+    }
+}
 
 .portfolio-items .portfolio-item .portfolio-card {
     border-radius: 10px 10px 0 0;
@@ -596,3 +593,95 @@ a{
 }
 
 /* End Portfolio Section */
+
+/* STart Team Section  */
+.team-content .team-members .team-member {
+    border-radius: 10px;
+    border: 1px solid transparent;
+    background: var(--scondary-bg-color)
+}
+
+.team-section .team-content .team-members .team-member .img-container {
+    border-radius: 10px;
+    overflow: hidden;
+    aspect-ratio: 4 / 4;
+    position: relative;
+}
+
+.team-content .team-member .img-container img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.team-content .team-member .img-container .overlay {
+    width: 100%;
+    height: 100%;
+    background-color: #008870ab;
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: flex;
+    align-items: end;
+    justify-content: center;
+    gap: 0.5rem;
+    transition: 0.5s;
+    z-index: -1;
+    opacity: 0;
+}
+
+.team-content .team-member .img-container .overlay a {
+    width: 50px;
+    height: 50px;
+    text-align: center;
+    line-height: 50px;
+    border-radius: 50%;
+    border: 1px solid #dadada;
+    margin-bottom: 1rem;
+    background: #a2a2a2;
+    font-size: 22px;
+    transition: 0.3s;
+}
+
+.team-content .team-member .img-container .overlay a:hover {
+    color: var(--primary-green-color) !important;
+    background-color: white;
+}
+
+.team-content .team-member .member-info {
+    text-align: center;
+    padding: 20px;
+}
+.team-content .team-member .member-info span {
+    font-weight: 600;
+    margin-bottom: 0.5rem;
+    display: block;
+    color: var(--primary-green-color);
+}
+
+.team-content .team-member .member-info p {
+    font-size: 15px;
+    color: var(--default-color);
+}
+
+
+.team-content .team-member:hover {
+    border-color: var(--primary-green-color);
+    box-shadow: 0px 0px 20px 0px #0088708a;
+    transform: translateY(-15px);
+
+    .img-container img {
+        transform: scale(1.2);
+    }
+
+    .img-container .overlay {
+        z-index: 1;
+        opacity: 1;
+    }
+
+    .member-info h4 {
+        color: var(--primary-green-color);
+    }
+}
+
+/* STart Team Section */
